tests/js_error/source_locations/destructure/object/empty_to_object.exp
TypeError: null has no properties
  ┌ tests/js_error/source_locations/destructure/object/empty_to_object.js:1:5
  |
1 | var {} = null;
  |     ^
Stack:
  at <global> (tests/js_error/source_locations/destructure/object/empty_to_object.js:1:5)